Ajustar erro de ortografia

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"> Desenvolvedor Jr</h3>
                             <div class="subheading mb-3"></div>
-                            <p>Tenho 23 de experiência em cobrança. Nessa minha trajetória passei pelas funções:  de atendimento em Call Center ativo, receptivo,  analista de qualidade da supervisão.
+                            <p>Tenho 23 anos de experiência em cobrança. Nessa minha trajetória passei pelas funções:  de atendimento em Call Center ativo, receptivo,  analista de qualidade da supervisão.
 
-                                Resolvi fazer transição para a carreira de TI porque sou apaixonado por tecnologia e acredito que com a minha dedicação e foco, em muito pouco tempo vou aprender rápido e agregar muito ao time!
+                                Resolvi fazer transição para a carreira de TI porque sou apaixonado por tecnologia e acredito que com a minha dedicação e foco, em  pouco tempo vou agregar muito ao time!
                                 
                                 Almejo uma oportunidade para mostrar minha garra por novos desafios.
                                 
